--- a/Mission04/Views/Home/MovieForm.cshtml
+++ b/Mission04/Views/Home/MovieForm.cshtml
@@ -4,13 +4,26 @@
 
 @model Mission04.Models.FormResponse
 
+    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+
 <h1>Enter a Movie:</h1>
 
 
 <div>
     <form method="post">
-        <label asp-for="Category">Category</label>
-        <input asp-for="Category" /><br />
+
+        <div asp-validation-summary="All"> </div>
+
+        <label asp-for="CategoryId">Category</label>
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryId">@c.CategoryName</option>
+            }
+        </select><br />
+
 
         <label asp-for="Title">Title</label>
         <input asp-for="Title" /><br />
