--- a/Mission04/Views/Shared/_Layout.cshtml
+++ b/Mission04/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Movie Form</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieList">Movie List</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MyPodcasts">My Podcasts</a>
                         </li>
                     </ul>
