--- a/Mission04/Views/Home/Index.cshtml
+++ b/Mission04/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 
 <!--Home page with heading and image-->
 
+<link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+
 <h1>The Joel Hilton Film Collection</h1>
 
 <img src="~/img/JoelHiltonHeadshot.jpg" height="500" />
